IntelliJ Projects/dev-nn-sfdx/force-app/main/default/objects/Opportunity/fields/Discount_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Discount_Expiration_Date__c</fullName>
    <label>Discount Expiration Date</label>
    <type>Date</type>
</CustomField>