IntelliJ Projects/dev-nn-sfdx/force-app/main/default/objects/Opportunity/fields/Offer_Sent__c.field-meta.xml
<CustomField>
    <fullName>Offer_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Offer Sent</label>
    <type>Checkbox</type>
</CustomField>