IntelliJ Projects/dev-nn-sfdx/force-app/main/default/objects/Opportunity/recordTypes/Deloitte_Technology.recordType-meta.xml
<RecordType>
    <fullName>Deloitte_Technology</fullName>
    <active>true</active>
    <businessProcess>Deloitte Technology</businessProcess>
    <label>Deloitte Technology</label>
</RecordType>