IntelliJ Projects/dev-nn-sfdx/force-app/main/default/objects/Opportunity/validationRules/DiscountExpNotNullWhenDiscountNotNull.validationRule-meta.xml
<ValidationRule>
    <fullName>DiscountExpNotNullWhenDiscountNotNull</fullName>
    <active>false</active>
    <description>DiscountExpNotNullWhenDiscountNotNull</description>
    <errorConditionFormula>AND(
NOT(ISNULL( Discount__c )),
ISNULL( Discount_Expiration_Date__c )
)</errorConditionFormula>
    <errorDisplayField>Discount_Expiration_Date__c</errorDisplayField>
    <errorMessage>Discount expiration cannot be blank if Discount % is filled.</errorMessage>
</ValidationRule>