IntelliJ Projects/dev-nn-sfdx/force-app/main/default/objects/Opportunity/validationRules/MissingSome_AuditStageReq.validationRule-meta.xml
<ValidationRule>
    <fullName>MissingSome_AuditStageReq</fullName>
    <active>false</active>
    <errorConditionFormula>OR(
And(
ISPICKVAL( StageName , &quot;Price Negotiation&quot;),
ISNULL( Amount )
),
And(
ISPICKVAL( StageName , &quot;Closed Lost&quot;),
ISBLANK(TEXT( Lost_Reason__c ))
),
And(
ISPICKVAL( StageName , &quot;Price Negotiation&quot;),
ISBLANK(TEXT( Lost_Reason__c ))
)
)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>ERROR: PLEASE PICK REQUIRED FIELDS!</errorMessage>
</ValidationRule>